--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,24 @@ body {
     text-wrap: balance;
   }
 }
+
+.main-bg {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2)),
+    url('/landing-page.jpeg');
+  background-size: cover;
+  height: 100vh;
+  width: 100%;
+  background-position: center;
+}
+.auth-bg {
+  background-image: linear-gradient(
+      to top,
+      rgba(0, 0, 0, 0.8),
+      rgba(0, 0, 0, 0.2)
+    ),
+    url('/auth_logo.jpg');
+  background-size: cover;
+  height: 100vh;
+  width: 100%;
+  background-position: center;
+}
